--- a/Scripts/Aggregate_SL_Demand.ipynb
+++ b/Scripts/Aggregate_SL_Demand.ipynb
@@ -11,10 +11,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {
-    "collapsed": false,
-    "show_input": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -29,18 +28,28 @@
     "#I/O\n",
     "main_directory = os.path.dirname(os.path.dirname(my_modeller.desktop.project.path)).replace(\"\\\\\",\"/\")\n",
     "import_path = os.path.join(main_directory, \"emme_project\\Database\").replace(\"\\\\\",\"/\")\n",
-    "ouput_path = os.path.join(main_directory, \"output\").replace(\"\\\\\",\"/\")\n",
+    "output_path = os.path.join(main_directory, \"output\").replace(\"\\\\\",\"/\")\n",
     "file_name_input = os.path.join(import_path, \"xref_taz13_jur.csv\")\n",
-    "file_name_input2 = os.path.join(import_path, \"SL_query.csv\")\n",
-    "\n",
-    "\n",
+    "file_name_input2 = os.path.join(import_path, \"SL_query.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false,
+    "show_input": true
+   },
+   "outputs": [],
+   "source": [
+    "## Read selected demand matrices for a region listed in query and add them to get the aggregated demand of that region\n",
+    "## Then transform it to a 2*2 matrix for internal-external trips the selected region. Using cross refrenced table to \n",
+    "## identify internal and external TAZs\n",
     "CR_data = pd.read_csv(file_name_input,sep=',')\n",
     "query = pd.read_csv(file_name_input2,sep=',')\n",
     "\n",
     "suffixes = query['Query']\n",
     "periods = [\"EA\", \"AM\", \"MD\", \"PM\", \"EV\"]\n",
-    "#matrix_id = \"mf1505\"\n",
-    "\n",
     "\n",
     "for s in suffixes :\n",
     "    agg=[]\n",
@@ -49,31 +58,6 @@
     "    for matrix in emmebank.matrices():\n",
     "        if matrix.type == \"FULL\" and \"Selected demand\" in matrix.description and s in matrix.description :\n",
     "            matrix_id_list.append(matrix.id)\n",
-    "#expression = \"+\".join(matrix_id_list)\n",
-    "\n",
-    "\n",
-    "#     NAMESPACE = \"inro.emme.data.matrix.create_matrix\"\n",
-    "#     create_matrix = my_modeller.tool(NAMESPACE)\n",
-    "\n",
-    "\n",
-    "#     if emmebank.matrix(id=matrix_id) in emmebank.matrices() :\n",
-    "#         emmebank.delete_matrix(id=matrix_id)\n",
-    "\n",
-    "#     new_mat = create_matrix(matrix_id=matrix_id,\n",
-    "#                         matrix_name=\"totdem\",\n",
-    "#                         matrix_description=\"total daily demand \",\n",
-    "#                         default_value=0)\n",
-    "\n",
-    "#     NAMESPACE = \"inro.emme.matrix_calculation.matrix_calculator\"\n",
-    "#     compute_matrix = my_modeller.tool(NAMESPACE)\n",
-    "\n",
-    "#     for i in matrix_id_list :\n",
-    "#         expression = \"+\".join([i,matrix_id])    \n",
-    "#         specification = {\n",
-    "#        \"type\": \"MATRIX_CALCULATION\",\n",
-    "#         \"result\": matrix_id,\n",
-    "#         \"expression\": expression }\n",
-    "#         compute_matrix(specification)\n",
     "\n",
     "    mat=[]\n",
     "    for i in matrix_id_list :\n",
@@ -90,17 +74,12 @@
     "    EI=demand.iloc[index_E].iloc[:,index_I].values.sum()\n",
     "    EE=demand.iloc[index_E].iloc[:,index_E].values.sum()\n",
     "    aggregated_demand = pd.DataFrame ({ 'col1' :[EE,IE] , 'col2' : [EI,II] })\n",
-    "    #agg.append(aggregated_demand)\n",
-    "    #file_name = \"SL_Agg_SLDaily\" + s + \"_\" + p +\".csv\"\n",
-    "    #dir_ouput = os.path.join(ouput_path, file_name)\n",
-    "    #aggregated_demand.to_csv(dir_ouput, header = False, index= False)\n",
     "\n",
-    "    #temp = reduce(lambda x,y: x+y , agg )\n",
     "    file_name2 = \"SL_Agg_SLDaily_\" + s +\".csv\"\n",
-    "    dir_ouput2 = os.path.join(ouput_path, file_name2)\n",
-    "    #temp.to_csv(dir_ouput2, header = False, index= False)\n",
-    "    aggregated_demand.to_csv(dir_ouput2, header = False, index= False)\n",
-    "\n",
+    "    dir_output2 = os.path.join(output_path, file_name2)\n",
+    "    aggregated_demand.to_csv(dir_output2, header = False, index= False)\n",
+    "    TAZ_list = pd.DataFrame({\"TAZ\" : group_I}) \n",
+    "    TAZ_list.to_csv( output_path + \"/xref_taz13_jur_\" + s + \".csv\", header = False, index= False)\n",
     "\n",
     "    "
    ]
