--- a/Scripts/Intrazonal_VMT.ipynb
+++ b/Scripts/Intrazonal_VMT.ipynb
@@ -10,10 +10,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
-    "collapsed": false,
-    "show_input": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -31,7 +30,21 @@
     "import_path = os.path.join(main_directory, \"emme_project\\Database\").replace(\"\\\\\",\"/\")\n",
     "ouput_path = os.path.join(main_directory, \"output\").replace(\"\\\\\",\"/\")\n",
     "file_name_input = os.path.join(import_path, \"xref_taz13_jur.csv\")\n",
-    "#file_name_input2 = os.path.join(import_path, \"SL_query.csv\")\n",
+    "#file_name_input2 = os.path.join(import_path, \"SL_query.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false,
+    "show_input": true
+   },
+   "outputs": [],
+   "source": [
+    "## Read Demand Matrices and aggreagted them in a single matrix(by TOD). Read the diagonal for intra trips\n",
+    "## Read distance Skim. Read diagnoal for intra skim.\n",
+    "## Summarize all in a single table for all TAZs\n",
     "\n",
     "z=emmebank.scenario(100).zone_numbers\n",
     "CR_data = pd.read_csv(file_name_input,sep=',')\n",
@@ -51,29 +64,6 @@
     "            skim = emmebank.matrix( id = matrix.id).get_numpy_data()\n",
     "\n",
     "\n",
-    "    #    NAMESPACE = \"inro.emme.data.matrix.create_matrix\"\n",
-    "    #    create_matrix = my_modeller.tool(NAMESPACE)\n",
-    "    #   matrix_id = \"mf1504\"\n",
-    "\n",
-    "    #    if emmebank.matrix(id=matrix_id) in emmebank.matrices() :\n",
-    "    #        emmebank.delete_matrix(id=matrix_id)\n",
-    "\n",
-    "    #    new_mat = create_matrix(matrix_id=matrix_id,\n",
-    "    #                        matrix_name=\"totdem\",\n",
-    "    #                        matrix_description=\"total daily demand uptwn\",\n",
-    "    #                      default_value=0)\n",
-    "\n",
-    "    #    NAMESPACE = \"inro.emme.matrix_calculation.matrix_calculator\"\n",
-    "    #    compute_matrix = my_modeller.tool(NAMESPACE)\n",
-    "\n",
-    "    #    for i in matrix_id_list :\n",
-    "    #        expression = \"+\".join([i,matrix_id])    \n",
-    "    #        specification = {\n",
-    "    #        \"type\": \"MATRIX_CALCULATION\",\n",
-    "     #       \"result\": matrix_id,\n",
-    "    #        \"expression\": expression }\n",
-    "    #        compute_matrix(specification)\n",
-    "\n",
     "    mat_intra = []\n",
     "    for i in matrix_id_list :\n",
     "        mat_intra.append(emmebank.matrix(id=i).get_numpy_data().diagonal())\n",
@@ -81,10 +71,6 @@
     "\n",
     "\n",
     "\n",
-    "        #trip_intra = emmebank.matrix( id = matrix_id ).get_numpy_data().diagonal() \n",
-    "        #group_I = CR_data[CR_data['Suffix']== suffix]['zone_id']\n",
-    "        #index_I = group_I - 1 \n",
-    "        #VMT_intra = trip_intra[index_I] * skim_intra[index_I]\n",
     "    result = pd.DataFrame( { period: trip_intra , 'TAZ':z} )\n",
     "    return result\n",
     "\n",
