--- a/Scripts/delete_extra_attribute_link_multiple.ipynb
+++ b/Scripts/delete_extra_attribute_link_multiple.ipynb
@@ -1,15 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true,
     "show_input": true
    },
-   "outputs": [],
    "source": [
-    "#loop through TOD to delete extra select link fields"
+    "#loop through TOD to delete extra select link fields\n",
+    "\n",
+    "##Initial Script: Ziying Ouyang Feb 2019"
    ]
   },
   {
@@ -68,8 +68,7 @@
     "\n",
     "suffixes = pd.read_csv(file_name_input,sep=',')\n",
     "\n",
-    "suffixes = suffixes['Suffixes']\n",
-    "print(suffixes)"
+    "suffixes = suffixes['Suffixes']\n"
    ]
   },
   {
@@ -167,7 +166,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "show_input": true
    },
    "outputs": [],
    "source": []
