--- a/Scripts/export_select_link_volumes.ipynb
+++ b/Scripts/export_select_link_volumes.ipynb
@@ -6,7 +6,8 @@
    "source": [
     "#Summarize select link flow results by time of day periods to base scenario and export\n",
     "##setup and create attribute to store total select link flows\n",
-    "##export the total select link flows to a CSV file"
+    "##export the total select link flows to a CSV file\n",
+    "##Initial Script: Ziying Ouyang Feb 2019"
    ]
   },
   {
