--- a/Scripts/summarize_select_link.ipynb
+++ b/Scripts/summarize_select_link.ipynb
@@ -8,7 +8,8 @@
    },
    "source": [
     "##Example to sum select link flow results from all time periods to base scenario for export\n",
-    "#####Setup and and create attribute to store total select link flows"
+    "####Setup and create attribute to store total select link flows\n",
+    "###Initial Script: Ziying Ouyang Feb 2019"
    ]
   },
   {
