--- a/Scripts/set_selected_zone.ipynb
+++ b/Scripts/set_selected_zone.ipynb
@@ -1,43 +1,24 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true,
     "show_input": true
    },
-   "outputs": [],
    "source": [
-    "# Set up database dimension for select link assignment"
+    "# Set up database dimension for select link assignment\n",
+    "\n",
+    "##Initial Script: Ziying Ouyang Feb 2019"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
-    "collapsed": false,
-    "show_input": true
+    "collapsed": false
    },
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-9-bb2caefadb74>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[0mdimensions\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"extra_attribute_values\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m22000000\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m change_db_dimension(emmebank_dimensions=dimensions,\n\u001b[1;32m---> 12\u001b[1;33m               keep_backup=True)\n\u001b[0m",
-      "\u001b[1;32mC:\\Program Files\\INRO\\Emme\\Emme 4\\Emme-4.3.7\\python-lib\\win64\\2.7\\modeller\\inro.director.logging\\inro\\director\\logging\\trail.pyc\u001b[0m in \u001b[0;36m__trace\u001b[1;34m(*args, **kwargs)\u001b[0m\n",
-      "\u001b[1;32mC:/Users/arasha/AppData/Local/Temp/change_database_dimensions-639c784f66ea11e9abb8d0946610ebbd.pyc\u001b[0m in \u001b[0;36m__call__\u001b[1;34m(self, emmebank_dimensions, emmebank, keep_backup)\u001b[0m\n",
-      "\u001b[1;32mC:\\Program Files\\INRO\\Emme\\Emme 4\\Emme-4.3.7\\python-lib\\win64\\2.7\\api\\inro\\emme\\database\\emmebank.pyc\u001b[0m in \u001b[0;36mchange_dimensions\u001b[1;34m(path, dimensions, keep_backup)\u001b[0m\n",
-      "\u001b[1;32mC:\\Program Files\\INRO\\Emme\\Emme 4\\Emme-4.3.7\\python-lib\\win64\\2.7\\api\\inro\\emme\\database\\emmebank.pyc\u001b[0m in \u001b[0;36m_copy_emmebank\u001b[1;34m(src_bank, dst_bank)\u001b[0m\n",
-      "\u001b[1;32mC:\\Program Files\\INRO\\Emme\\Emme 4\\Emme-4.3.7\\python-lib\\win64\\2.7\\api\\inro\\emme\\database\\emmebank.pyc\u001b[0m in \u001b[0;36m_copy_matrix\u001b[1;34m(src_matrix, dst_matrix)\u001b[0m\n",
-      "\u001b[1;32mC:\\Program Files\\INRO\\Emme\\Emme 4\\Emme-4.3.7\\python-lib\\win64\\2.7\\api\\inro\\emme\\database\\matrix.pyc\u001b[0m in \u001b[0;36mname\u001b[1;34m(self)\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "\n",
@@ -47,10 +28,7 @@
     "import_attr_values = modeller.tool(\"inro.emme.data.network.import_attribute_values\")\n",
     "create_attr = modeller.tool(\"inro.emme.data.extra_attribute.create_extra_attribute\")\n",
     "copy_attr = modeller.tool(\"inro.emme.data.network.copy_attribute\")\n",
-    "dimensions = emmebank.dimensions\n",
-    "dimensions[\"extra_attribute_values\"]=18000000\n",
-    "change_db_dimension(emmebank_dimensions=dimensions,\n",
-    "              keep_backup=True)\n"
+    "\n"
    ]
   },
   {
@@ -87,17 +65,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "show_input": true
    },
    "outputs": [],
    "source": [
+    "### based on number of selected regions in query set this number. 40000000 is the default for 4 regions\n",
+    "required_dimensions = 40000000\n",
     "new_dimensions = emmebank.dimensions\n",
-    "\n",
-    "new_dimensions[\"extra_attribute_values\"]+=22000000\n",
-    "change_db_dimension(emmebank_dimensions=new_dimensions,\n",
+    "if new_dimensions[\"extra_attribute_values\"] < required_dimensions :\n",
+    "    new_dimensions[\"extra_attribute_values\"] = required_dimensions\n",
+    "    change_db_dimension(emmebank_dimensions=new_dimensions,\n",
     "              keep_backup=True)"
    ]
   }
