--- a/Scripts/export_select_link_volumes.ipynb
+++ b/Scripts/export_select_link_volumes.ipynb
@@ -72,31 +72,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "show_input": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('ID1', '@tcov_id'),\n",
-       " ('length', 'length'),\n",
-       " ('AB_selcarl', '@sel_carl'),\n",
-       " ('BA_selcarl', ('@sel_carl', '')),\n",
-       " ('AB_selchul', '@sel_chul'),\n",
-       " ('BA_selchul', ('@sel_chul', '')),\n",
-       " ('AB_selcoro', '@sel_coro'),\n",
-       " ('BA_selcoro', ('@sel_coro', '')),\n",
-       " ('AB_seldelm', '@sel_delm'),\n",
-       " ('BA_seldelm', ('@sel_delm', ''))]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "hwyload_attrs = [(\"ID1\", \"@tcov_id\"),(\"length\",\"length\")]\n",
     "# AB daily select link volume by section set\n",
@@ -111,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "show_input": true
@@ -152,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "show_input": true
@@ -160,6 +141,7 @@
    "outputs": [],
    "source": [
     "data = pd.read_csv(file_name,sep=',')\n",
+    "data = data.fillna(0)\n",
     "names=[]\n",
     "for s in suffixes:\n",
     "    AB_Flow = 'AB_sel' + s\n",
@@ -177,16 +159,6 @@
     "data = data[colnames]\n",
     "data.to_csv(file_name, index= False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "show_input": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
