Convert any select link suffix with only numbers to string

--- a/Scripts/aggregate_SL_demand.ipynb
+++ b/Scripts/aggregate_SL_demand.ipynb
@@ -13,7 +13,8 @@
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "show_input": true
    },
    "outputs": [],
    "source": [
@@ -52,6 +53,7 @@
     "periods = [\"EA\", \"AM\", \"MD\", \"PM\", \"EV\"]\n",
     "\n",
     "for s in suffixes :\n",
+    "    s = str(s)\n",
     "    agg=[]\n",
     "    matrix_id_list=[]\n",
     "#    for p in periods :\n",
