--- a/Scripts/delete_extra_attribute_link_multiple.ipynb
+++ b/Scripts/delete_extra_attribute_link_multiple.ipynb
@@ -101,7 +101,8 @@
     "#delete daily select link volumes in base scenario (100)\n",
     "#suffixes = [\"dtwn\",\"uptn\",\"kmsa\",\"svly\"]\n",
     "\n",
-    "for suffix in suffixes:        \n",
+    "for suffix in suffixes:   \n",
+    "        suffix = str(suffix)\n",
     "        if base_scenario.extra_attribute(\"@sel_\"+ suffix):\n",
     "            base_scenario.delete_extra_attribute(\"@sel_\"+ suffix) \n"
    ]
@@ -141,6 +142,7 @@
    "source": [
     "#loop through number of select links to delete select link fields\n",
     "for suffix in suffixes:\n",
+    "    suffix = str(suffix)\n",
     "    auto_attrs = [\"@sl_\" + name.lower() + \"_\" + suffix\n",
     "              for name in auto_classes]\n",
     "\n",
