--- a/Scripts/delete_matrix.ipynb
+++ b/Scripts/delete_matrix.ipynb
@@ -84,6 +84,7 @@
     "matrix_id_list = []\n",
     "matrix_id_name = []\n",
     "for s in suffixes: \n",
+    "    s = str(s)\n",
     "    for matrix in emmebank.matrices():\n",
     "        if s in matrix.description  :\n",
     "            matrix_id_list.append(matrix.id)\n",
@@ -98,7 +99,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "show_input": true
    },
    "outputs": [],
    "source": []
