--- a/Scripts/summarize_select_link.ipynb
+++ b/Scripts/summarize_select_link.ipynb
@@ -50,6 +50,7 @@
    "execution_count": 3,
    "metadata": {
     "collapsed": false,
+    "scrolled": true,
     "show_input": true
    },
    "outputs": [
@@ -71,6 +72,7 @@
    "source": [
     "#Iterate through the suffix results and summarize the flows    \n",
     "def summarize_select_link(suffix, base_scenario, network, ref_networks):\n",
+    "    suffix = str(suffix)\n",
     "    total_name = \"@sel_\" + suffix\n",
     "    if base_scenario.extra_attribute(total_name):\n",
     "        base_scenario.delete_extra_attribute(total_name)\n",
@@ -123,8 +125,8 @@
     "    ref_networks.append(scenario.get_network())\n",
     "\n",
     "#suffixes = [\"dtwn\",\"uptn\",\"kmsa\",\"svly\"]\n",
-    "#suffixes = [\"enci\"]\n",
     "for suffix in suffixes:\n",
+    "    suffix = str(suffix)\n",
     "    summarize_select_link(suffix, base_scenario, base_network, ref_networks)\n",
     "\n",
     "    \n",
@@ -138,16 +140,6 @@
     "#    selection = {\"node\": \"all\", \"link\": \"all\", \"turn\": \"none\", \"transit_line\": \"none\"})\n",
     "    \n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "show_input": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
