--- a/Scripts/export_select_link_volumes.ipynb
+++ b/Scripts/export_select_link_volumes.ipynb
@@ -66,7 +66,7 @@
     "\n",
     "#suffixes = [\"dtwn\",\"uptn\",\"kmsa\",\"svly\"]\n",
     "#suffixes = [\"enci\"]\n",
-    "total_names = [\"@sel_\" + suffix \n",
+    "total_names = [\"@sel_\" + str(suffix)\n",
     "             for suffix in suffixes]"
    ]
   },
@@ -144,6 +144,7 @@
     "data = data.fillna(0)\n",
     "names=[]\n",
     "for s in suffixes:\n",
+    "    s = str(s)\n",
     "    AB_Flow = 'AB_sel' + s\n",
     "    BA_Flow = 'BA_sel' + s\n",
     "    total_flow = \"Total_Flow_sel\" + s\n",
